@@ -1,11 +1,15 @@
-﻿/*
- * $Id: ChangeLog,v 1.1163 2013-09-30 02:34:52 guerra000 Exp $
+/*
+ * $Id: ChangeLog,v 1.1164 2013-09-30 20:36:32 fyurisich Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2013-09-30 17:35 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
+   * source/c_gdiplus.c
+     * Use HB_ISNUM and HB_ISLOG macros.
 
 2013-09-29 21:30 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
    * source/c_image.c
